2011-07-05  Ivan Maidanski <ivmai@mail.ru>

	* dyn_load.c (GC_register_dynamic_libraries): Remove duplicate
	call of GC_FirstDLOpenedLinkMap (twice).
	* dyn_load.c (GC_register_main_static_data): Add comment.
	* cord/cordbscs.c (CORD_riter): Check for empty string passed (do
	not call CORD_riter4 if CORD_len() returned zero).
	* cord/cordbscs.c (CORD_init_min_len): Replace the K&R-style
	function definition with the ANSI C one.
	* cord/cordbscs.c: Expand all tabs to spaces; remove
	trailing spaces at EOLn.
	* tests/threadkey_test.c (on_thread_exit_inner): Check
	GC_pthread_create() result.

2011-07-04  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gcconfig.h (etext): Don't define if unused
	(NetBSD).
	* include/private/gcconfig.h (GC_data_start, DATASTART): Define
	for NetBSD/amd64 if ELF.
	* include/private/gcconfig.h (SEARCH_FOR_DATA_START): Don't define
	for NetBSD/amd64 if ELF.

2011-07-04  Ivan Maidanski <ivmai@mail.ru> (mostly really Andy Wingo)

	* configure.ac (GC_THREADS): Refine the comment.
	* configure.ac (GC_WIN32_PTHREADS): Add template.
	* configure.ac (cygwin, win32): Define GC_WIN32_THREADS instead of
	GC_THREADS.
	* configure.ac (pthreads): Add mingw target (GC_WIN32_PTHREADS).
	* configure: Regenerate.
	* include/private/config.h.in: Ditto.
	* include/private/gc_locks.h (GC_WIN32_PTHREADS): Remove nested
	test for the macro; add comment.

2011-07-01  Ivan Maidanski <ivmai@mail.ru>

	* win32_threads.c (CHECK_LOOKUP_MY_THREAD): New macro definition.
	* win32_threads.c (GC_reset_finalizer_nested,
	GC_check_finalizer_nested, GC_unregister_my_thread,
	GC_do_blocking_inner, GC_call_with_gc_active, GC_init_parallel):
	Insert CHECK_LOOKUP_MY_THREAD before dereferencing thread
	descriptor pointer (to instruct a LINT-like tool that it is ok to
	dereference the pointer).
	* win32_threads.c (GC_get_next_stack): Assert plast_stack_min is
	non-NULL if current_min is not ADDR_LIMIT (for a LINT-like tool).